# NotchIsland

./: .gitignore  LICENSE  README.md  project.yml
.github/workflows/: build.yml
MediaHelper/: CMakeLists.txt
MediaHelper/include/: MediaHelper.h
MediaHelper/src/: MediaHelper.m
NotchIsland/: AppDelegate.swift  Info.plist  NotchIsland.entitlements  NotchIslandApp.swift
NotchIsland.xcodeproj/: project.pbxproj
NotchIsland/Models/: CalendarEvent.swift  NowPlayingInfo.swift  SystemStats.swift  TimerState.swift  WeatherInfo.swift
NotchIsland/Resources/en.lproj/: Localizable.strings
NotchIsland/Resources/ja.lproj/: Localizable.strings
NotchIsland/Services/: NotchDetector.swift  OverlayWindowManager.swift  WindowTilingService.swift
NotchIsland/Utils/: AnimationConstants.swift  Extensions.swift
NotchIsland/ViewModels/: CalendarViewModel.swift  NotificationViewModel.swift  NowPlayingViewModel.swift  SystemMonitorViewModel.swift  TimerViewModel.swift  WeatherViewModel.swift
NotchIsland/Views/: CalendarView.swift  CompactViews.swift  IslandContainerView.swift  LanguagePickerView.swift  NotificationView.swift  NowPlayingView.swift  SettingsView.swift  SystemStatsView.swift  TimerView.swift  WeatherView.swift
